# privatus-chat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVATUS_CHAT_ROADMAP.txt  README.md  SECURITY.md  information.txt  launch_gui.py  performance_metrics.json  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.txt  test_message_auth.py  test_rate_limiting_simple.py
.github/workflows/: cd.yml  ci.yml
Document/: Privatus-chat Development Plan.md  Privatus-chat Quick Start Guide for Cursor Agents.md  Signal Protocol Research Notes.md
config/: development.env  production.env
demo_data/: demo_file.txt
demo_data/keys/: identity_key.enc  one_time_prekeys.enc  signed_prekey.enc
demo_keys/: identity_key.enc  signed_prekey.enc
deployment/: Dockerfile  Dockerfile.multistage  auto_updater.py  build.py  cross_platform.py  dependency_manager.py  deploy.py  docker-compose.yml  linux_packages.py  macos_dmg_builder.py  platform_integration.py  release_manager.py  windows_installer.py
deployment/config/: linux_config.json  macos_config.json  windows_config.json
docs/: DEVELOPMENT_PLAN.md
docs/developer/: api-reference.md  architecture.md  database-schema.md  developer-guide.md  development-debugging-troubleshooting.md  development-deployment-best-practices.md  protocol-specification.md  security-implementation.md  threat-model-security-analysis.md
docs/user/: backup-recovery-procedures.md  cryptographic-key-management-troubleshooting.md  database-storage-troubleshooting.md  deployment-troubleshooting.md  docker-deployment-guide.md  faq.md  feature-enhanced-storage.md  feature-file-transfer.md  feature-group-chat.md  feature-kademlia-dht.md  feature-nat-traversal.md  feature-onion-routing-anonymity.md  feature-performance-monitoring.md  feature-security-testing.md  feature-voice-communication.md  gui-interface-troubleshooting.md  installation-guide-linux.md  installation-guide-macos.md  installation-guide-windows.md  installation-guide.md  (+12 more)
examples/: comprehensive_demo.py  gui_demo.py  phase10_documentation_demo.py  phase8_performance_demo.py  phase9_security_demo.py  week3_networking_demo.py  week4_anonymity_demo.py  week5_gui_demo.py
src/: __init__.py  main.py
tests/: __init__.py  test_anonymity.py  test_communication.py  test_crypto.py  test_crypto_operations.py  test_gui.py  test_messaging.py  test_networking.py  test_performance.py  test_rate_limiting.py  test_security.py  test_security_regression.py  test_storage.py
(+69 files in other folders)
